--- a/shippable.yml
+++ b/shippable.yml
@@ -10,25 +10,23 @@ build:
    ci:
        - grunt
    on_success:
-       - cd micro-www && docker build -t manishas/micro-www .
+       - cd micro-www && docker build -t shippabledocker/micro-www .
        - cd ..
-       - cd micro-api && docker build -t manishas/micro-api .
-       - docker tag -f manishas/micro-www:latest manishas/micro-www:tip 
-       - docker tag -f manishas/micro-api:latest manishas/micro-api:tip
-       - docker push manishas/micro-api:tip
-       - docker push manishas/micro-www:tip
+       - cd micro-api && docker build -t shippabledocker/micro-api .
+       - docker tag -f shippabledocker/micro-www:latest shippabledocker/micro-www:tip 
+       - docker tag -f shippabledocker/micro-api:latest shippabledocker/micro-api:tip
+       - docker push shippabledocker/micro-api:tip
+       - docker push shippabledocker/micro-www:tip
 
 integrations:
     notifications:
-        - integrationName: www_notif
+        - integrationName: ship-slack
           type: slack
           recipients:
-              - www-notifications
+              - "hitchcock1-public"
           on_success: always
           on_failure: always
 
     hub:
-        - integrationName: manishasDockerHub
+        - integrationName: ship-docker
           type: docker
-
-
